# Puzzled

./: Cargo.toml  README.md  de.til7701.PuzzleMoreDays.json  meson.build
.github/workflows/: build-and-test.yaml  build.yaml  release-github.yaml  tagged-release.yaml
data/: de.til7701.PuzzleMoreDays.desktop.in  de.til7701.PuzzleMoreDays.gschema.xml  de.til7701.PuzzleMoreDays.metainfo.xml.in  de.til7701.PuzzleMoreDays.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
puzzle_config/src/: json.rs  lib.rs
puzzle_solver/: Cargo.toml
puzzle_solver/src/: array_util.rs  bitmask.rs  board.rs  core.rs  lib.rs  tile.rs
puzzlemoredays/: Cargo.toml
puzzlemoredays/src/: application.rs  main.rs  meson.build  puzzle_state.rs  state.rs  style.css  view.rs  window.rs  window.ui
puzzlemoredays/src/presenter/: main.rs  puzzle_area.rs
puzzlemoredays/src/puzzle/: config.rs  mod.rs
puzzlemoredays/src/solver/: mod.rs
src/: application.rs  main.rs  meson.build  offset.rs  puzzle_state.rs  puzzleaday.gresource.xml  state.rs  style.css  view.rs  window.rs  window.ui
src/presenter/: board.rs  main.rs  mod.rs  puzzle_area.rs  tile.rs
src/puzzle/: mod.rs
